After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773939 - vaapivideomemory: increment map counter only if succeeded
vaapivideomemory: increment map counter only if succeeded
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
unspecified
Other All
: Normal normal
: 1.11.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-04 12:39 UTC by Víctor Manuel Jáquez Leal
Modified: 2016-11-04 13:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vaapivideomemory: increment map counter only if succeeded (1.49 KB, patch)
2016-11-04 12:39 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2016-11-04 12:39:48 UTC
Previously the frame map counter increased independently if the map succeeded
or not. This leaded to critical messages and crashes if the frame was unable
to be mapped, but the counter increased.

This patch increases the map counter only if the map operation occurred.
Comment 1 Víctor Manuel Jáquez Leal 2016-11-04 12:39:53 UTC
Created attachment 339115 [details] [review]
vaapivideomemory: increment map counter only if succeeded
Comment 2 Víctor Manuel Jáquez Leal 2016-11-04 13:00:57 UTC
Attachment 339115 [details] pushed as ae8e5d4 - vaapivideomemory: increment map counter only if succeeded
Comment 3 Víctor Manuel Jáquez Leal 2016-11-04 13:09:46 UTC
this patch should be back ported to 1.10 and 1.8 too